Add scrollbar styles

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 20px;
+    background-color: rgb(24, 24, 27);
+    border-left: solid 1px white;
+}
+
+::-webkit-scrollbar-thumb {
+    margin-top: 50px;
+    border: 4px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+    /* border-radius: 9999px; */
+    background-color: #aaaaaa;
+}
